<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/homepage"
        android:text="@string/home"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:fontFamily="@font/segoe_ui_bold"
        android:gravity="center"
        android:layout_marginTop="50dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/homedes"
        android:text="@string/homedes"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:fontFamily="@font/segoe_ui_regular"
        android:gravity="center"
        android:layout_margin="20dp"
        android:layout_below="@+id/homepage"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="0dp"
        android:layout_alignParentBottom="true"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCon"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"
            android:background="@drawable/home_btn"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnIns"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"
            android:background="@drawable/home_btn"

            />


    </LinearLayout>

</RelativeLayout>